--- a/public/labs/lab_2/style.css
+++ b/public/labs/lab_2/style.css
@@ -59,7 +59,10 @@ p, li {
   flex-flow: row wrap;
 }
 
-
+body > * {
+  background-color: red;
+  padding: 1%;
+}
 
 .main, .header, nav, .article, .aside, .footer, section {
   background-color: rgba(0,255,0,0.5);
