--- a/public/labs/lab_3/styles.css
+++ b/public/labs/lab_3/styles.css
@@ -1,2 +1,14 @@
 /* Add some css styles based on the tutorial at javascript.info: introduction to browser events
  https://javascript.info/introduction-browser-events */
+ .main{
+    background-color : blue;
+    text-align: center;
+ }
+ .left{
+     background : gray;
+     box-align: start;
+ }
+ .right{
+     background : gray;
+     box-align: end;
+ }
