--- a/public/labs/lab_3/styles.css
+++ b/public/labs/lab_3/styles.css
@@ -2,7 +2,9 @@
  https://javascript.info/introduction-browser-events */
  .main{
     background-color : blue;
-    text-align: center;
+    height: 600px;
+    width: 600 px;
+    vertical-align: middle;
  }
  .left{
      background : gray;
