--- a/public/labs/lab_3/styles.css
+++ b/public/labs/lab_3/styles.css
@@ -2,8 +2,8 @@
  https://javascript.info/introduction-browser-events */
  .main{
     background-color : blue;
-    width: 100%;
+    width : 100%;
     height : 100%;
-    vertical-align: middle;
-    text-align: center;
+    top : 50%;
+    text-align : center;
  }
