--- a/public/labs/lab_3/styles.css
+++ b/public/labs/lab_3/styles.css
@@ -4,6 +4,6 @@
     background-color : blue;
     width : 100%;
     height : 100%;
-    top : 50%;
+    margin-top : 50%;
     text-align : center;
  }
