--- a/public/labs/lab_3/styles.css
+++ b/public/labs/lab_3/styles.css
@@ -4,9 +4,12 @@
     background-color : blue;
     width : 100%;
     height : 100%;
+    vertical-align : top;
     text-align : center;
  }
  .carousel{
-     margin-top : 50%;
-     margin-left : 50%;
+     margin-top : 25%;
+     margin-left : 25%;
+     margin-right : 25%;
+     margin-bottom : 25%;
  }
