--- a/public/labs/lab_3/styles.css
+++ b/public/labs/lab_3/styles.css
@@ -7,9 +7,9 @@
     vertical-align : top;
     text-align : center;
  }
- .carousel{
-     margin-top : 25%;
-     margin-left : 25%;
-     margin-right : 25%;
-     margin-bottom : 25%;
- }
+ .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
