--- a/public/labs/lab_3/styles.css
+++ b/public/labs/lab_3/styles.css
@@ -2,10 +2,10 @@
  https://javascript.info/introduction-browser-events */
  body{
     background-color : blue;
-    width : 100%;
-    height : 100%;
  }
  .center {
-    display: block;
-    text-align: center;
+    display : block;
+    margin-left : auto;
+    margin-right : auto;
+    width : 50%;
   }
