--- a/public/labs/lab_3/styles.css
+++ b/public/labs/lab_3/styles.css
@@ -5,7 +5,5 @@
  }
  .center {
     display : block;
-    margin-left : auto;
-    margin-right : auto;
-    width : 50%;
+    text-align: center;
   }
