--- a/public/labs/lab_3/styles.css
+++ b/public/labs/lab_3/styles.css
@@ -4,6 +4,6 @@
     background-color : blue;
  }
  .center {
-    display : block;
-    text-align : center;
+    margin-top : 50%;
+    margin-left : 50%;
   }
