--- a/public/flappy/style.css
+++ b/public/flappy/style.css
@@ -52,7 +52,7 @@ body {
 }
 
 .bird{
-    background-image: url('flappy-bird.png');
+    background-color: yellow;
     width: 60px;
     height: 45px;
     position: absolute;
