--- a/public/flappy/style.css
+++ b/public/flappy/style.css
@@ -52,9 +52,11 @@ body {
 }
 
 .bird{
-    background-color: yellow;
+    background-image: url('flappy-bird.png');
     width: 60px;
     height: 45px;
+    left: 220px;
+    bottom: 100px;
     position: absolute;
 }
 
